# zorro_binance_futures_plugin

./: .gitignore  .gitmodules  CMakeLists.txt  ChangeLog.md  LICENSE  README.md  dllmain.cpp
VS/: BinanceFutures.sln  BinanceFutures.vcxproj  BinanceFutures.vcxproj.filters
include/: binance_futures.h
src/: binance_futures.cpp
